# openwop-examples

./: .gitignore  README.md
.github/workflows/: conformance-soak.yml  examples.yml  postgres-host-conformance.yml
examples/: README.md
examples/ads-publish-pipeline/: README.md  ads-creative-publish-google.json  ads-creative-publish-meta.json  ads-creative-publish-tiktok.json
examples/approval-workflow/: README.md  approval-workflow.mjs  package.json
examples/branch-fork/: README.md  branch-fork.mjs  package.json
examples/branching-workflow/: README.md  branching-workflow.mjs  package.json  workflow.json
examples/core-packs-lockfile/: README.md  openwop-pack-lockfile.json
examples/hosts/in-memory/: README.md  certification-bundle.json  conformance.md  package.json  tsconfig.json
examples/hosts/postgres/: README.md  conformance-full.md  package-lock.json  package.json
examples/hosts/python/: README.md  conformance.md  pyproject.toml
examples/hosts/python/src/openwop_host/: __init__.py  __main__.py  fixtures.py  idempotency.py  runs.py  server.py  webhooks.py
examples/hosts/sqlite/: .gitignore  README.md  conformance-full.md  conformance.md  package-lock.json  package.json
examples/hosts/wasm-sandbox/: README.md  package-lock.json  package.json  tsconfig.json
examples/idempotent-runs/: README.md  idempotent-runs.mjs  package.json
examples/market-intel-pipeline/: README.md  market-intel-ai-first-research.json  market-intel-research.json
examples/mcp-stdio-bridge/: README.md  bridge.mjs  echo-stdio-server.mjs  package.json
examples/mcp-tool/: README.md  mcp-tool.mjs  package.json
examples/multi-agent-cross-host/: README.md  bridge.ts
examples/multi-agent-research-assistant/: README.md
examples/node-pack-publishing/: README.md  node-pack-publishing.mjs  package.json
examples/packs/prompt-sample/: README.md
examples/packs/rust-hello/: Cargo.toml  README.md  pack.json
examples/packs/rust-hello/src/: lib.rs
examples/packs/rust-misbehaving-abi/: Cargo.toml  README.md  pack.json
examples/packs/rust-misbehaving-abi/src/: lib.rs
examples/packs/rust-misbehaving-memory/: Cargo.toml  README.md  pack.json
examples/packs/rust-misbehaving-memory/.cargo/: config.toml
examples/packs/rust-misbehaving-memory/src/: lib.rs
examples/packs/vendor-template/: README.md  index.mjs  pack.json
examples/rag-grounded-chat/: README.md  rag-grounded-chat.json
examples/streaming-client/: README.md  package.json  streaming-client.mjs
examples/tiny-workflow/: README.md  package.json  tiny-workflow.mjs
scripts/: check-example-pack-refs.mjs  check-workflow-chain-expansion-sync.mjs
(+99 files in other folders)
