[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openwop-host-in-memory-python"
version = "1.0.0"
description = "Python 3.11 stdlib-only reference host for the openwop v1 wire contract. Mirrors examples/hosts/in-memory/ in shape; drives the @openwop/openwop-conformance suite end-to-end."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "openwop project" },
]
dependencies = []

[project.urls]
Homepage = "https://github.com/openwop/openwop"
Repository = "https://github.com/openwop/openwop"

[project.scripts]
openwop-host = "openwop_host.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
