[package]
name = "rust-misbehaving-abi"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Deliberately-misbehaving WASM node pack for openwop conformance — exercises RFC 0008 §H ABI-version rejection. Declares ABI version 999 (host supports v1). NOT for registry publication; fixture-only."

[lib]
name = "rust_misbehaving_abi"
crate-type = ["cdylib"]

[dependencies]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
